04_合约攻击/code/securify2/securify/solidity/v_0_5_x/solidity_grammar_core.py
from __future__ import annotations

from decimal import Decimal
from itertools import takewhile
from typing import Set

from .solidity_builtins import *
from .solidity_modifiers import *
from .solidity_utils import *
from ..base import AstNodeBase
from ..utils import *
from ..utils import __
from ...grammar import production, abstract_production, ProductionOps
from ...grammar.attributes import ListElement
from ...grammar.attributes.annotations3 import pushdown, synthesized, inherited, All
from ...ir import cfg_ir as ir
from ...ir.cfgutils import CfgSimple, build_function_cfg

RETURN_PLACEHOLDER_ID = -24011994
"""ID of the return value dummy variable"""

SEND_TRANSFER_GAS = 2300
"""Standard amount of gas used for .send() and .transfer()"""

DEFAULT_INIT = "defaultInit"
"""Marker for default initializations"""

DEFAULT_FALLBACK_NAME = "$_default_fallback_$"

INHERITED_FLAG = "inherited"
"""Annotation flag for inherited elements"""


@abstract_production
class AstNode(AstNodeBase, ProductionOps):
    id: int

    cfg = synthesized(default=UndefinedAttribute("CFG not defined"))

    stage1_context: Stage1Context = inherited()
    stage2_context: Stage2Context = inherited()

    _solc_version = inherited()

    def resolve_reference(self, node_id):
        return self.root().ast_nodes_by_id().get(node_id, None)

    def __str__(self):
        return f"{self.__class__.__qualname__} [{self.src}; line {self.src_line}]"


@abstract_production
class ContractPart(AstNode):
    pass


class VarStateMixin:
    variables_pre: Dict[int, ir.Expression] = inherited(default=lambda: {})
    """Mapping of variable ids to CFG nodes before this statement"""

    variables_post: Dict[int, ir.Expression] = synthesized()
    """Mapping of variable ids to CFG nodes after this statement"""

    scope_pre: Set[int] = inherited(default=set)
    """Set of local variable ids that are visible in the scope of this element"""

    scope_post: Set[int] = synthesized()
    """Set of local variable ids that are visible in the scope after this element"""

    changed_variables: Set[int] = synthesized(default=set)
    """Set of ids of changed local variable in the current expression / statement"""

    @synthesized
    def variables_post(self): return self.variables_pre

    @pushdown
    def variables_pre(self) -> VarStateMixin.variables_pre @ All: return self.variables_pre  # TODO: VARIABLES WTF

    @synthesized
    def scope_post(self): return self.scope_pre

    @pushdown
    def scope_pre(self) -> VarStateMixin.scope_pre @ All: return self.scope_post

    # noinspection PyUnresolvedReferences
    def is_local_variable(self, identifier):
        if not isinstance(identifier, Identifier):
            return False

        decl = self.resolve_reference(identifier.referenced_declaration)

        return isinstance(decl, VariableDeclaration) and not decl.state_variable


@abstract_production
class Statement(AstNode, VarStateMixin):
    required_arguments_continue = inherited(default=UndefinedAttribute("Statement not in loop."))
    """Ids of variables that are required as arguments for a continue statement"""

    required_arguments_break = inherited(default=UndefinedAttribute("Statement not in loop."))
    """Ids of variables that are required as arguments for a break statement"""

    is_reachable = inherited(default=True)
    """Indicates that this statement is part of some program path"""

    is_reachable_next = synthesized()
    """Indicates that a directly following statement is reachable"""

    control_flow_statements = synthesized(default=lambda: set())
    """Set of break and continue statements in this statement and its children"""

    is_part_of_modifier = inherited(default=False)
    """Is this statement defined in the body of a modifier"""

    @synthesized
    def is_reachable_next(self): return self.is_reachable


@abstract_production
class SimpleStatement(Statement):
    pass


@abstract_production
class Expression(AstNode, VarStateMixin):
    expression_value = synthesized(default=fail_on_access)
    """Current symbolic value of the expression"""

    expression_value_used = inherited(default=True, implicit_pushdown=False)
    """Is the result of this expression used?"""

    @property
    def type_string(self) -> str:
        return self.type_descriptions["typeString"]

    @property
    def type_identifier(self) -> str:
        return self.type_descriptions["typeIdentifier"]


@abstract_production
class PrimaryExpression(Expression):
    pass


@abstract_production
class TypeName(AstNode):
    default_value = synthesized(default=fail_on_access)
    """Default initialization value of this type"""


@production
class SourceUnit(AstNode):
    nodes: List[TopLevelNode]

    stage1_context = synthesized()
    stage2_context = synthesized()

    @lru_cache(None)
    def ast_nodes_by_id(self):
        return {d.id: d for d in self.descendants() if d is not None}

    @pushdown
    def push_cfgs(self,
                  nodes: ContractDefinition.contract_cfg_unlinked) -> ContractDefinition.cfgs_unlinked @ nodes:
        return [c.contract_cfg_unlinked for c in of_type[ContractDefinition](self.nodes)]

    @synthesized
    def stage1_context(self, nodes: {ContractDefinition.cfg_local_state_init,
                                     ContractDefinition.contract_modifier_cfgs}):
        contracts = list(of_type[ContractDefinition](nodes))
        return Stage1Context(
            {c.id: c.cfg_local_state_init for c in contracts},
            {i: m for c in contracts for i, m in c.contract_modifier_cfgs.items()},
        )

    @synthesized
    def stage2_context(self, nodes: {ContractDefinition.contract_function_cfgs}):
        contracts = list(of_type[ContractDefinition](nodes))
        return Stage2Context(
            {i: m for c in contracts for i, m in c.contract_function_cfgs.items()}
        )

    @pushdown
    def _(self) -> AstNode.stage1_context @ nodes:
        return self.stage1_context

    @pushdown
    def _(self) -> AstNode.stage2_context @ nodes:
        return self.stage2_context

    @pushdown
    def _(self: ListElement[SourceUnit, "nodes"]) -> TopLevelNode.cfgs_constructors @ next:
        if isinstance(self, ContractDefinition):
            return {**self.cfgs_constructors, self.id: self.cfg_constructor_chain}

        return self.cfgs_constructors

    @synthesized
    def cfg(self, nodes: AstNode.cfg):
        return ir.SourceUnit(self, [node.cfg for node
                                    in of_type[ContractDefinition](nodes)
                                    if not isinstance(node.cfg, UndefinedAttribute)])


@abstract_production
class TopLevelNode(AstNode):
    """Abstract base class for top-level AST nodes"""

    cfgs_unlinked = inherited()
    """All contract cfgs with unlinked function calls"""

    cfgs_constructors = inherited(default=dict)
    """All constructor CFGs"""

    cfg_constructor_chain = synthesized(default=UndefinedAttribute("Not a contract"))


@production
class PragmaDirective(TopLevelNode):
    pass


@production
class ImportDirective(TopLevelNode):
    pass


@production
class ContractDefinition(TopLevelNode):
    name: str
    nodes: List[ContractPart]
    base_contracts: Optional[List[InheritanceSpecifier]]
    linearized_base_contracts: List[int]

    contract_cfg_unlinked = synthesized()
    """CFG of this contract without linked functions"""

    contract_modifier_cfgs = synthesized()
    """CFGs of modifier defined in this contract (indexed by declaring node id)"""

    contract_function_cfgs = synthesized()
    """CFGs of functions defined in this contract (indexed by declaring node id)"""

    cfg_local_state_init = synthesized()
    """CFG for initialization of local state variables"""

    cfg_state_init = synthesized()
    """CFG for initialization of state variables"""

    cfg_constructor = synthesized()
    """CFG of this contract's constructor"""

    @synthesized
    def contract_function_cfgs(self, nodes: {FunctionDefinition.cfg}):
        return {f.id: f.cfg for f in of_type[FunctionDefinition](nodes)}

    @synthesized
    def contract_cfg_unlinked(self, nodes: {ContractPart.cfg}):
        cfgs = of_type[FunctionDefinition](nodes)
        cfgs = {node.id: build_function_cfg(node.cfg) for node in cfgs if node.implemented}

        state_vars = of_type[VariableDeclaration](nodes)
        state_vars = {var.id: ir.StateVariable(var, var.name, var.qualified_name, var.constant) for var in state_vars}

        return ir.Contract(self, self.name, cfgs, state_vars)

    @synthesized
    def contract_modifier_cfgs(self, nodes: {ModifierDefinition.modifier_cfg}):
        return {node.id: node.modifier_cfg for node in filter_by_type(nodes, ModifierDefinition)}

    @synthesized
    def cfg(self):
        if not self.fully_implemented:
            return UndefinedAttribute("Contract not fully implemented")

        if self.contract_kind == "library":
            return UndefinedAttribute("Contract is a library")

        unlinked_cfgs = self.cfgs_unlinked
        inherited_contracts = [c for c in unlinked_cfgs if c.ast_node.id in self.linearized_base_contracts]
        inherited_libraries = [c for c in unlinked_cfgs if c.ast_node.contract_kind == "library"]

        variables = {}
        functions = {}
        functions_mro = []

        for cc in inherited_contracts + inherited_libraries:
            inherited_functions = deepcopy(cc.functions)
            inherited_variables = deepcopy(cc.variables)

            for _, (f, _) in inherited_functions.items():
                # Note that we are including base constructor implementations
                # here which cannot be called directly in order to deploy the
                # contract. We set their visibility to internal such that the
                # only visible constructor is the one created below.
                if f.constructor:
                    f.visibility = "internal"

                # Update names of inherited functions
                if self.id != cc.ast_node.id:
                    f.name = f"{cc.name}.{f.name}"
                    f.with_annotations(INHERITED_FLAG)

            for _, v in inherited_variables.items():
                if self.id != cc.ast_node.id:
                    v.with_annotations(INHERITED_FLAG)

            functions = {**functions, **inherited_functions}
            functions_mro += inherited_functions.values()

            variables = {**variables, **inherited_variables}

        # Build constructor function
        functions[self.id] = build_function_cfg(
            ir.Function(self, "Constructor", deepcopy(self.cfg_constructor), "public", constructor=True))

        link_functions(functions, functions_mro)
        link_state_vars(functions, variables)

        return ir.Contract(self, self.name,
                           {f: c for f, (c, _) in functions.items()}, variables)


@production
class InheritanceSpecifier(ContractPart):
    base_name: UserDefinedTypeName
    arguments: Optional[List[Expression]]

    argument_cfgs = synthesized()

    @synthesized
    def argument_cfgs(self, arguments: {Expression.cfg,
                                        Expression.expression_value}):
        if arguments:
            return [(a.cfg, a.expression_value) for a in arguments]

        return UndefinedAttribute("InheritanceSpecifier has no arguments.")

    @property
    def referenced_declaration(self):
        return self.base_name.referenced_declaration

    def resolve(self) -> ContractDefinition:
        return self.resolve_reference(self.referenced_declaration)


@production
class UsingForDirective(ContractPart):
    library_name: UserDefinedTypeName
    type_name: Optional[TypeName]


@production
class StructDefinition(ContractPart):
    members: List[VariableDeclaration]

    @synthesized
    def cfg(self): return CfgSimple.empty()


@production
class EnumDefinition(ContractPart):
    members: Optional[List[EnumValue]]

    def canonical_name_of(self, member_name_or_id):
        if isinstance(member_name_or_id, str):
            return f"{self.canonical_name}.{member_name_or_id}"

        if isinstance(member_name_or_id, int):
            return self.canonical_name_of(self.members[member_name_or_id].name)

    def default_member(self):
        return ir.Const(self, self.canonical_name_of(0))


@production
class EnumValue(AstNode):
    pass


@production
class ParameterList(AstNode):
    parameters: List[VariableDeclaration]

    default_values = synthesized()
    """List of default values for the parameters"""

    @synthesized
    def default_values(self, parameters: {VariableDeclaration.default_value}):
        return [(p, p.default_value) for p in parameters]


@production
class FunctionDefinition(ContractPart):
    parameters: ParameterList
    return_parameters: ParameterList
    modifiers: List[ModifierInvocation]
    body: Optional[Block]

    name: str

    returns = synthesized()
    """Parameter and return initializations"""

    implicit_return = synthesized()
    """Implicit return cfg; appended if cfg paths not terminated by explicit return"""

    arguments = synthesized()
    """Placeholders for the function's arguments"""

    arguments_return = synthesized()
    """Placeholders for the function's return arguments"""

    modifier_arguments = synthesized()
    """Placeholders for the function's return arguments"""

    cfg_body = synthesized()
    """Cfg of the body with implicit return statement"""

    cfg_return_inits = synthesized()
    """Initializations for return values"""

    cfg_unmodified = synthesized()
    """Cfg of this function without modifiers"""

    cfg_modified = synthesized()
    """Cfg of this function with modifiers"""

    @property
    def is_payable(self):
        return self.state_mutability == "payable"

    @property
    def is_view(self):
        return self.state_mutability == "view"

    @property
    def is_constructor(self):
        return self.kind == "constructor"

    @property
    def signature(self):
        return (tuple(p.type_string for p in self.parameters.parameters),
                tuple(p.type_string for p in self.return_parameters.parameters))

    @pushdown
    def push_variables(self) -> VarStateMixin.variables_pre @ {body, modifiers}:
        return {d.id: a for d, a in self.returns + self.arguments}

    @pushdown
    def push_scope(self) -> VarStateMixin.scope_pre @ {body, modifiers}:
        return {d.id for d, _ in self.returns + self.arguments}

    @pushdown
    def push_arguments_to_modifier(self) -> ModifierInvocation.function_arguments @ modifiers:
        return [a for _, a in self.returns + self.arguments]

    @pushdown
    def push_argument_ids_to_modifier(self) -> ModifierInvocation.function_argument_ids @ modifiers:
        return [a.id for a, _ in self.returns + self.arguments]

    @synthesized
    def returns(self, return_parameters):
        return [
            *((d, ir.Assignment(d, value, d.name, type_string=value.type_string)) for d, value in
              return_parameters.default_values)]  # TODO: if d.name != '')]

    @synthesized
    def arguments(self, parameters):
        return [(p, ir.Parameter(p, name=p.name, info=p.name)) for p in parameters.parameters]

    @synthesized
    def arguments_return(self, return_parameters):
        return [(p, ir.Parameter(p, name=p.name, info=p.name)) for p in return_parameters.parameters]

    @synthesized
    def modifier_arguments(self, modifiers: {ModifierInvocation.modifier_arguments}):
        return [(m, m.modifier_arguments) for m in modifiers]

    @synthesized
    def implicit_return(self, body, return_parameters):
        if not self.implemented:
            return UndefinedAttribute("Implicit return not applicable to unimplemented methods.")

        variables_post = body.variables_post
        return_arguments = [variables_post[d.id] if d.name != '' else
                            default_value for (d, default_value) in return_parameters.default_values]

        return ir.Return(self, return_arguments, variables_post)

    @synthesized
    def cfg_return_inits(self, return_parameters):
        cfg = CfgSimple.empty()
        cfg >>= CfgSimple.statements(*map(__[1], return_parameters.default_values))
        cfg >>= CfgSimple.concatenate(*map(__[1], self.returns))

        return cfg

    @synthesized
    def cfg_body(self, body):
        if not self.implemented:
            return UndefinedAttribute("Cfg not available for unimplemented method.")

        return body.cfg >> self.implicit_return

    @synthesized
    def cfg_unmodified(self):
        if not self.implemented:
            return UndefinedAttribute("Cfg not available for unimplemented method.")

        return (self.cfg_body <<
                self.cfg_return_inits <<
                ir.Block(self, args=list(map(__[1], self.arguments)), info="Function"))

    @synthesized
    def cfg_modified(self: {FunctionDefinition.cfg_body,
                            FunctionDefinition.cfg_return_inits,
                            FunctionDefinition.arguments,
                            FunctionDefinition.returns},
                     modifiers: {ModifierInvocation.is_constructor,
                                 ModifierInvocation.modifier_template,
                                 ModifierInvocation.modifier_arguments}):
        if not self.implemented:
            return UndefinedAttribute("Cfg not available for unimplemented method.")

        return modify_function_body(self, modifiers)

    @synthesized
    def cfg(self, modifiers):
        if not self.implemented:
            return UndefinedAttribute("Function not implemented.")

        cfg = (self.cfg_unmodified if not modifiers else
               self.cfg_modified)

        if self.is_constructor:
            name = "constr_impl"
        elif self.name == "":
            name = DEFAULT_FALLBACK_NAME
        else:
            name = self.name

        return ir.Function(self, name, cfg,
                           visibility=self.visibility,
                           payable=self.is_payable,
                           signature=self.signature,
                           constructor=self.is_constructor,
                           view=self.is_view)


@production
class VariableDeclaration(ContractPart):
    value: Optional[Expression]
    type_name: TypeName

    name: str

    default_value = synthesized()
    """Default value inferred from the underlying type"""

    initialization = synthesized()
    """Initialization value"""

    initialization_cfg = synthesized()
    """Initialization CFG"""

    @property
    def qualified_name(self):
        if not self.state_variable or not isinstance(self.parent(), ContractDefinition):
            raise CfgCompilationError("Qualified name was requested for a non-state variable.")

        return f"{self.parent().name}.{self.name}"

    @synthesized
    def default_value(self, type_name: TypeName.default_value):
        return type_name.default_value

    @synthesized
    def initialization(self, value):
        if value is not None:
            '''
            Consider the contract:
            contract C{
                uint[] a = [1,2];
            }
            In this case, the expression value will be undefined attribute, so according to 
            the documentation we should be using the flattened_expression_values. 
            flattened_expression_variables return an array which probably contrains only one element
            so we should get the first element. If we don't then the expression inside the array will not
            be handled correctly
            '''
            if not isinstance(value.expression_value, UndefinedAttribute):
                return value.expression_value

            return value.flattened_expression_values[0]

        return self.default_value

    @synthesized
    def initialization_cfg(self, value):
        if value is not None:
            return value.cfg

        return CfgSimple.statement(self.default_value)

    @property
    def type_string(self):
        return self.type_descriptions["typeString"]

    @synthesized
    def cfg(self):
        return self.initialization_cfg


class PlaceholderArg(ir.CFGNode):
    def __init__(self, name: str):
        super().__init__(None)
        self.name = name

    def __str__(self):
        return " _ "

    def __repr__(self):
        return " _ "


@production
class ModifierDefinition(ContractPart):
    parameters: ParameterList
    body: Block

    name: str

    arguments = synthesized()
    """Placeholders for the modifiers's arguments"""

    modifier_cfg = synthesized()
    """CFG of this modifier"""

    implicit_return = synthesized()
    """Implicit return statement"""

    initial_placeholder_arg = synthesized()

    @synthesized_once
    def initial_placeholder_arg(self):
        return PlaceholderArg(" _ ")

    @pushdown
    def push_is_part_of_modifier(self) -> Block.is_part_of_modifier @ body:
        return True

    @pushdown
    def push_variables(self) -> VarStateMixin.variables_pre @ body:
        return {**{d.id: a for d, a in self.arguments},
                RETURN_PLACEHOLDER_ID: self.initial_placeholder_arg}

    @pushdown
    def push_scope(self) -> VarStateMixin.scope_pre @ body:
        return {*{d.id for d, _ in self.arguments}, RETURN_PLACEHOLDER_ID}

    @synthesized
    def arguments(self, parameters):
        return [(p, ir.Argument(p, info=p.name + " (modifier)"))
                for p in parameters.parameters]

    @synthesized
    def implicit_return(self, body):
        placeholder = body.variables_post[RETURN_PLACEHOLDER_ID]
        return ir.Return(self, [placeholder], body.variables_post)

    @synthesized
    def modifier_cfg(self, body):
        cfg = CfgSimple.empty()

        # cfg >>= ir.Block(self, args=list(map(__[1], self.arguments)), info="Modifier " + self.name)
        cfg >>= body.cfg
        cfg >>= self.implicit_return

        return cfg, self.arguments, self.initial_placeholder_arg

    @synthesized
    def cfg(self):
        return UndefinedAttribute("Use modifier_cfg instead.")


@production
class ModifierInvocation(AstNode, VarStateMixin):
    modifier_name: Identifier
    arguments: Optional[List[Expression]]

    is_constructor = synthesized()
    """Is this invocation a call to a super constructor?"""

    modifier_arguments = synthesized()
    """Lists of tuples consisting of cfgs and expression values for each argument. CFGs are complete blocks."""

    modifier_template = synthesized()

    function_arguments = inherited()
    """Arguments of the function (including return arguments)"""

    function_argument_ids = inherited()

    @synthesized
    def variables_post(self, arguments: {VarStateMixin.variables_post}):
        if arguments:
            return arguments[-1].variables_post

        return self.variables_pre

    @pushdown
    def push_variables(self: ListElement[ModifierInvocation, "arguments"]) -> Expression.variables_pre @ next:
        return self.variables_post

    @synthesized
    def is_constructor(self):
        return self.modifier_name.referenced_declaration not in self.stage1_context.cfg_modifiers

    @synthesized
    def modifier_arguments(self, arguments: {Expression.cfg,
                                             Expression.expression_value}):
        updated_parameters = [self.variables_post[t] for t in self.function_argument_ids]

        return wrap_modifier_args(arguments,
                                  updated_parameters,
                                  self.function_arguments)

    @synthesized
    def modifier_template(self):
        if self.is_constructor:
            return UndefinedAttribute(
                "Modifier template not available for super-constructor call. "
                "The implementation will insert calls to base constructors instead. "
                "Base constructors that are not called via modifier syntax will be "
                "added in ContractDefinition logic.")

        return expand_placeholders(
            self.stage1_context.cfg_modifiers[self.modifier_name.referenced_declaration],
            self.function_arguments,
            self)


@production
class EventDefinition(ContractPart):
    qualified_name = synthesized()
    @property
    def qualified_name(self):
        contract_name = self.find_ancestor_of_type(ContractDefinition).name
        return f"{contract_name}.{self.name}"
    parameters: ParameterList


@production
class ElementaryTypeName(TypeName):
    name: str

    @synthesized
    def default_value(self):
        if self.name.startswith('int') or self.name.startswith('uint'):
            return ir.Const(self, 0)

        if self.name.startswith('bool'):
            return ir.Const(self, False)

        if self.name.startswith('address'):
            return ir.Const(self, 0)

        if self.name.startswith('string'):
            return ir.Const(self, '')

        return ir.Const(self, 0)


@production
class UserDefinedTypeName(TypeName):
    @synthesized
    def default_value(self):
        decl = self.resolve_reference(self.referenced_declaration)
        if isinstance(decl, EnumDefinition):
            return decl.default_member()

        return ir.Const(self, "UDT")


@production
class FunctionTypeName(TypeName):
    @synthesized
    def default_value(self):
        return UndefinedAttribute("Function types have no default value")


@production
class Mapping(TypeName):
    @synthesized
    def default_value(self):
        return ir.Mapping(self, "N/A")


@production
class ArrayTypeName(TypeName):
    @synthesized
    def default_value(self):
        return ir.Array(self, [], 'N/A')


@production
class InlineAssembly(Statement):
    @synthesized
    def cfg(self):
        # TODO: Log a warning here
        return ir.IgnoredNode(self, "Inline Assembly is not supported yet "
                                    "and will be ignored.")


# noinspection PyMethodOverriding
@production
class Block(Statement):
    statements: List[Statement]

    # region VarStateMixin
    @pushdown
    def variables_map(self) -> Statement.variables_pre @ statements:
        return self.variables_pre

    @pushdown
    def variables_map_step(self: ListElement[Block, "statements"]) -> Statement.variables_pre @ next:
        return self.variables_post

    @synthesized
    def variables_post(self, statements: {Statement.is_reachable, Statement.variables_post}):
        if self.is_empty or not self.is_reachable:
            return self.variables_pre

        final_variables = self.reachable(statements)[-1].variables_post

        # Return the most recent assignments for variables,
        # but only those that were available outside of this block
        return {i: final_variables[i] for i in self.variables_pre.keys()}

    @synthesized
    def changed_variables(self, statements: {Statement.is_reachable, VarStateMixin.changed_variables}):
        return set().union(*(s.changed_variables for s in self.reachable(statements))) & self.scope_pre

    # endregion

    @property
    def is_empty(self):
        return len(self.statements) == 0

    @staticmethod
    def reachable(statements):
        return list(takewhile(lambda x: x.is_reachable, statements))

    @pushdown
    def push_reachable(self: ListElement[Block, "statements"]) -> Statement.is_reachable @ next:
        return self.is_reachable_next

    @synthesized
    def is_reachable_next(self, statements: {Statement.is_reachable_next}):
        return self.is_empty or statements[-1].is_reachable_next

    @synthesized
    def control_flow_statements(self, statements: {Statement.is_reachable,
                                                   Statement.control_flow_statements}):
        return set().union(*(s.control_flow_statements for s in self.reachable(statements)))
